# pengbot-aligner

./: .gitignore  README.md  setup.cfg  setup.py
example/: config_template.yaml
src/: aligner.py  cli.py  processor.py  utils.py
test/: test_aligner.py
