[metadata]
name = pengbot-aligner
version = 0.0.3
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pyyaml
    opencv-python
    scipy
    tqdm
    pandas
    pillow

scripts =
    bin/align.py